--- a/style.css
+++ b/style.css
@@ -10,16 +10,8 @@ body{
     background-color: rgb(248, 247, 245);
     height: 110vh;
 }
-.menu{
-    background-color: rgb(71, 6, 6);
-    width: 100%;
-    height: 10%;
-}
-.menu li{
-    display: flex;
-    color: white;
-    justify-content: space-between;
-    padding: 2rem;
+.discrition{
+    margin: 1rem;
 }
 .header{
     margin-top: 2rem;
@@ -56,10 +48,24 @@ body{
     display: flex;
     justify-content: center;
   }
+.goals li{
+    margin-bottom: 10px;
+    font-family: sans-serif;
+}
 
+ .footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(20, 20, 45);
+    width: 100%;
+    padding: 6px;
 
- a{
-    margin-bottom: 30px;
+  }
+  .footer a{
+    color:white;
+    margin-left: 15px;
+    padding: 3px;
   }
 @media (min-width: 900px){
   .discrition{
